# momo_CoopMod

./: README.md  Release_Package.rar  package_mod.ps1  sync_plugins.ps1
C/: pipe_client.c  pipe_client.exp  pipe_client.lib
Lua/: LuaPluginScript.lua
Lua/youneuoy_Data/plugins/lua/: LuaPluginScript.lua
Release_Package/M2TW_Seamless_Coop/: ReadMe_Install.txt
Release_Package/M2TW_Seamless_Coop/Plugins/lua/: LuaPluginScript.lua
Release_Package/M2TW_Seamless_Coop/Plugins/lua/redist/pipe_module/: dasdasdasd.code-workspace  init.lua
Release_Package/M2TW_Seamless_Coop/Server/: Run_Server.bat  config.toml
Rust/: Cargo.toml
Rust/src/: dropbox_service.rs  main.rs
c_module/: Project3.vcxproj  pipe_client.c  pipe_client.exp  pipe_client_dll.h
pipe_client_c/: pipe_client.c  pipe_client.lib  test_client.c  use_pipe_client.lua
rust_module/: Cargo.toml  bin_output.txt  check_output.txt  m2tweop_pipe
rust_module/m2tweop_temp/save/saves/: example.txt
rust_module/src/: dropbox_service.rs  main.rs
youneuoy_Data/plugins/lua/: LuaPluginScript.lua
youneuoy_Data/plugins/lua/redist/pipe_module/: init.lua
