[package]
name = "rust_module"
version = "0.1.0"
edition = "2024"

[dependencies]
interprocess = "2.2.3"
tokio = { version = "1.47.1", features = ["full"] }
winapi = { version = "0.3.9", features = [
    "winbase",
    "handleapi",
    "fileapi",
    "winnt",
    "namedpipeapi",
    "minwindef", # For DWORD, FALSE, LPVOID, WINBOOL, INVALID_HANDLE_VALUE
    "errhandlingapi", # For GetLastError
    "winerror", # For ERROR_BROKEN_PIPE
]}
reqwest = { version = "0.12", features = ["json", "blocking"] } # For making HTTP requests
futures = "0.3" # For futures::try_join!
url = "2.5" # For URL parsing
serde = { version = "1.0", features = ["derive"] } # For JSON serialization/deserialization
serde_json = "1.0" # For JSON serialization/deserialization
